crates/client/src/client/schema/snapshots/fuel_core_client__client__schema__tx__tests__submit_tx_gql_output.snap
---
source: crates/client/src/client/schema/tx.rs
expression: query.query
---
mutation Submit($tx: HexString!, $estimatePredicates: Boolean) {
  submit(tx: $tx, estimatePredicates: $estimatePredicates) {
    id
  }
}
