crates/client/src/client/schema/snapshots/fuel_core_client__client__schema__tx__tests__transactions_by_owner_gql_output.snap
---
source: crates/client/src/client/schema/tx.rs
expression: operation.query
---
query TransactionsByOwnerQuery($owner: Address!, $after: String, $before: String, $first: Int, $last: Int) {
  transactionsByOwner(owner: $owner, after: $after, before: $before, first: $first, last: $last) {
    edges {
      cursor
      node {
        rawPayload
        status {
          __typename
          ... on SubmittedStatus {
            time
          }
          ... on SuccessStatus {
            transactionId
            blockHeight
            time
            programState {
              returnType
              data
            }
            receipts {
              param1
              param2
              amount
              assetId
              gas
              digest
              id
              is
              pc
              ptr
              ra
              rb
              rc
              rd
              reason
              receiptType
              to
              toAddress
              val
              len
              result
              gasUsed
              data
              sender
              recipient
              nonce
              contractId
              subId
            }
            totalGas
            totalFee
            resolvedOutputs {
              utxoId
              output {
                __typename
                ... on CoinOutput {
                  to
                  amount
                  assetId
                }
                ... on ContractOutput {
                  inputIndex
                  balanceRoot
                  stateRoot
                }
                ... on ChangeOutput {
                  to
                  amount
                  assetId
                }
                ... on VariableOutput {
                  to
                  amount
                  assetId
                }
                ... on ContractCreated {
                  contract
                  stateRoot
                }
              }
            }
          }
          ... on PreconfirmationSuccessStatus {
            txPointer
            time
            transactionId
            totalFee
            totalGas
            receipts {
              param1
              param2
              amount
              assetId
              gas
              digest
              id
              is
              pc
              ptr
              ra
              rb
              rc
              rd
              reason
              receiptType
              to
              toAddress
              val
              len
              result
              gasUsed
              data
              sender
              recipient
              nonce
              contractId
              subId
            }
            resolvedOutputs {
              utxoId
              output {
                __typename
                ... on CoinOutput {
                  to
                  amount
                  assetId
                }
                ... on ContractOutput {
                  inputIndex
                  balanceRoot
                  stateRoot
                }
                ... on ChangeOutput {
                  to
                  amount
                  assetId
                }
                ... on VariableOutput {
                  to
                  amount
                  assetId
                }
                ... on ContractCreated {
                  contract
                  stateRoot
                }
              }
            }
          }
          ... on SqueezedOutStatus {
            reason
          }
          ... on FailureStatus {
            transactionId
            blockHeight
            time
            reason
            programState {
              returnType
              data
            }
            receipts {
              param1
              param2
              amount
              assetId
              gas
              digest
              id
              is
              pc
              ptr
              ra
              rb
              rc
              rd
              reason
              receiptType
              to
              toAddress
              val
              len
              result
              gasUsed
              data
              sender
              recipient
              nonce
              contractId
              subId
            }
            totalGas
            totalFee
            resolvedOutputs {
              utxoId
              output {
                __typename
                ... on CoinOutput {
                  to
                  amount
                  assetId
                }
                ... on ContractOutput {
                  inputIndex
                  balanceRoot
                  stateRoot
                }
                ... on ChangeOutput {
                  to
                  amount
                  assetId
                }
                ... on VariableOutput {
                  to
                  amount
                  assetId
                }
                ... on ContractCreated {
                  contract
                  stateRoot
                }
              }
            }
          }
          ... on PreconfirmationFailureStatus {
            txPointer
            time
            transactionId
            totalFee
            totalGas
            receipts {
              param1
              param2
              amount
              assetId
              gas
              digest
              id
              is
              pc
              ptr
              ra
              rb
              rc
              rd
              reason
              receiptType
              to
              toAddress
              val
              len
              result
              gasUsed
              data
              sender
              recipient
              nonce
              contractId
              subId
            }
            resolvedOutputs {
              utxoId
              output {
                __typename
                ... on CoinOutput {
                  to
                  amount
                  assetId
                }
                ... on ContractOutput {
                  inputIndex
                  balanceRoot
                  stateRoot
                }
                ... on ChangeOutput {
                  to
                  amount
                  assetId
                }
                ... on VariableOutput {
                  to
                  amount
                  assetId
                }
                ... on ContractCreated {
                  contract
                  stateRoot
                }
              }
            }
            reason
          }
        }
      }
    }
    pageInfo {
      endCursor
      hasNextPage
      hasPreviousPage
      startCursor
    }
  }
}
