crates/client/src/client/schema/snapshots/fuel_core_client__client__schema__tx__tests__transactions_connection_query_gql_output.snap
---
source: crates/client/src/client/schema/tx.rs
expression: operation.query
---
query TransactionsQuery($after: String, $before: String, $first: Int, $last: Int) {
  transactions(after: $after, before: $before, first: $first, last: $last) {
    edges {
      cursor
      node {
        rawPayload
        status {
          __typename
          ... on SubmittedStatus {
            time
          }
          ... on SuccessStatus {
            blockHeight
            time
            programState {
              returnType
              data
            }
            receipts {
              param1
              param2
              amount
              assetId
              gas
              digest
              id
              is
              pc
              ptr
              ra
              rb
              rc
              rd
              reason
              receiptType
              to
              toAddress
              val
              len
              result
              gasUsed
              data
              sender
              recipient
              nonce
              contractId
              subId
            }
            totalGas
            totalFee
          }
          ... on PreconfirmationSuccessStatus {
            txPointer
            transactionId
            totalFee
            totalGas
            receipts {
              param1
              param2
              amount
              assetId
              gas
              digest
              id
              is
              pc
              ptr
              ra
              rb
              rc
              rd
              reason
              receiptType
              to
              toAddress
              val
              len
              result
              gasUsed
              data
              sender
              recipient
              nonce
              contractId
              subId
            }
            outputs {
              __typename
              ... on CoinOutput {
                to
                amount
                assetId
              }
              ... on ContractOutput {
                inputIndex
                balanceRoot
                stateRoot
              }
              ... on ChangeOutput {
                to
                amount
                assetId
              }
              ... on VariableOutput {
                to
                amount
                assetId
              }
              ... on ContractCreated {
                contract
                stateRoot
              }
            }
          }
          ... on SqueezedOutStatus {
            reason
          }
          ... on PreconfirmationSqueezedOutStatus {
            transactionId
            reason
          }
          ... on FailureStatus {
            blockHeight
            time
            reason
            programState {
              returnType
              data
            }
            receipts {
              param1
              param2
              amount
              assetId
              gas
              digest
              id
              is
              pc
              ptr
              ra
              rb
              rc
              rd
              reason
              receiptType
              to
              toAddress
              val
              len
              result
              gasUsed
              data
              sender
              recipient
              nonce
              contractId
              subId
            }
            totalGas
            totalFee
          }
          ... on PreconfirmationFailureStatus {
            txPointer
            transactionId
            totalFee
            totalGas
            receipts {
              param1
              param2
              amount
              assetId
              gas
              digest
              id
              is
              pc
              ptr
              ra
              rb
              rc
              rd
              reason
              receiptType
              to
              toAddress
              val
              len
              result
              gasUsed
              data
              sender
              recipient
              nonce
              contractId
              subId
            }
            outputs {
              __typename
              ... on CoinOutput {
                to
                amount
                assetId
              }
              ... on ContractOutput {
                inputIndex
                balanceRoot
                stateRoot
              }
              ... on ChangeOutput {
                to
                amount
                assetId
              }
              ... on VariableOutput {
                to
                amount
                assetId
              }
              ... on ContractCreated {
                contract
                stateRoot
              }
            }
            reason
          }
        }
      }
    }
    pageInfo {
      endCursor
      hasNextPage
      hasPreviousPage
      startCursor
    }
  }
}
