crates/client/src/client/schema/snapshots/fuel_core_client__client__schema__tx__tests__transparent_transaction_by_id_query_gql_output.snap
---
source: crates/client/src/client/schema/tx.rs
expression: operation.query
---
query TransactionQuery($id: TransactionId!) {
  transaction(id: $id) {
    scriptGasLimit
    id
    txPointer
    inputAssetIds
    inputContracts
    inputContract {
      utxoId
      balanceRoot
      stateRoot
      txPointer
      contractId
    }
    inputs {
      __typename
      ... on InputCoin {
        utxoId
        owner
        amount
        assetId
        txPointer
        witnessIndex
        predicateGasUsed
        predicate
        predicateData
      }
      ... on InputContract {
        utxoId
        balanceRoot
        stateRoot
        txPointer
        contractId
      }
      ... on InputMessage {
        sender
        recipient
        amount
        nonce
        witnessIndex
        predicateGasUsed
        data
        predicate
        predicateData
      }
    }
    isScript
    isCreate
    isMint
    isUpgrade
    isUpload
    isBlob
    outputs {
      __typename
      ... on CoinOutput {
        to
        amount
        assetId
      }
      ... on ContractOutput {
        inputIndex
        balanceRoot
        stateRoot
      }
      ... on ChangeOutput {
        to
        amount
        assetId
      }
      ... on VariableOutput {
        to
        amount
        assetId
      }
      ... on ContractCreated {
        contract
        stateRoot
      }
    }
    outputContract {
      inputIndex
      balanceRoot
      stateRoot
    }
    mintAmount
    mintAssetId
    mintGasPrice
    receiptsRoot
    status {
      __typename
      ... on SubmittedStatus {
        time
      }
      ... on SuccessStatus {
        blockHeight
        time
        programState {
          returnType
          data
        }
        receipts {
          param1
          param2
          amount
          assetId
          gas
          digest
          id
          is
          pc
          ptr
          ra
          rb
          rc
          rd
          reason
          receiptType
          to
          toAddress
          val
          len
          result
          gasUsed
          data
          sender
          recipient
          nonce
          contractId
          subId
        }
        totalGas
        totalFee
      }
      ... on SuccessDuringBlockProductionStatus {
        txPointer
        transactionId
        receipts {
          param1
          param2
          amount
          assetId
          gas
          digest
          id
          is
          pc
          ptr
          ra
          rb
          rc
          rd
          reason
          receiptType
          to
          toAddress
          val
          len
          result
          gasUsed
          data
          sender
          recipient
          nonce
          contractId
          subId
        }
      }
      ... on SqueezedOutStatus {
        reason
      }
      ... on SqueezedOutDuringBlockProductionStatus {
        reason
      }
      ... on FailureStatus {
        blockHeight
        time
        reason
        programState {
          returnType
          data
        }
        receipts {
          param1
          param2
          amount
          assetId
          gas
          digest
          id
          is
          pc
          ptr
          ra
          rb
          rc
          rd
          reason
          receiptType
          to
          toAddress
          val
          len
          result
          gasUsed
          data
          sender
          recipient
          nonce
          contractId
          subId
        }
        totalGas
        totalFee
      }
      ... on FailureDuringBlockProductionStatus {
        txPointer
        transactionId
        receipts {
          param1
          param2
          amount
          assetId
          gas
          digest
          id
          is
          pc
          ptr
          ra
          rb
          rc
          rd
          reason
          receiptType
          to
          toAddress
          val
          len
          result
          gasUsed
          data
          sender
          recipient
          nonce
          contractId
          subId
        }
        reason
      }
    }
    witnesses
    script
    scriptData
    policies {
      tip
      maturity
      witnessLimit
      maxFee
    }
    salt
    storageSlots
    bytecodeWitnessIndex
    bytecodeRoot
    subsectionIndex
    subsectionsNumber
    proofSet
    upgradePurpose {
      __typename
      ... on ConsensusParametersPurpose {
        witnessIndex
        checksum
      }
      ... on StateTransitionPurpose {
        root
      }
    }
    blobId
  }
}
